<resources>
    <string name="app_name">ProyekPertamaDimas</string>
    <string name="judul">Menghitung Ongkos Kirim Ojek</string>
    <string name="InputBerat">Masukan Berat Barang ( dalam Kg )</string>
    <string name="InputJarak">Masukan Jarak Pengiriman ( dalam KM )</string>
    <string name="InputRating">Bagaimana Pelayanannya? ( Berikan Rating 1-4 )</string>
    <string name="InputTip">Ingin Memberikan Tip Kepada Driver?</string>
    <string name="jmlOngkir">Jumlah Ongkos Kirim</string>
    <string name="jmlTip">Jumlah Tip Yang Di Berikan</string>
    <string name="total">Jumlah Uang Yang Harus Di bayarkan ( Rp )</string>
    <string name="nilaiDefaultAngka">0</string>
    <string name="buttonHitung">Hitung Ongkos Kirim</string>
    <string name="buttonGantiGambar">Ganti Gambar Random</string>

    <string name="buttonPindahHalamanKurir">Pindah Ke Halaman Kurir</string>
    <string name="buttonPindahHalamanGambar">Pindah Ke Halaman Random Gambar</string>
    <string name="buttonPindahHalamanRetrofitUser">Pindah Ke Halaman Retrofit User</string>

    <string name="buttonPindahHalamanListFilm">Pindah Ke Halaman List FIlm</string>

</resources>