<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/judul"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/judul"
        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/InputBerat"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/labelBerat"
        app:layout_constraintTop_toTopOf="@id/inputBerat" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:hint="@string/nilaiDefaultAngka"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        android:id="@+id/inputBerat"
        app:layout_constraintTop_toBottomOf="@id/judul" />


    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/InputJarak"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/labelJarak"
        app:layout_constraintTop_toBottomOf="@id/labelBerat" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:hint="@string/nilaiDefaultAngka"
        app:layout_constraintEnd_toEndOf="parent"

        android:inputType="number"
        android:id="@+id/inputJarak"

        app:layout_constraintTop_toTopOf="@id/labelJarak" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/InputRating"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/labelRating"

        app:layout_constraintTop_toBottomOf="@id/labelJarak" />

    <RadioGroup
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        android:id="@+id/inputRatingGroups"
        app:layout_constraintTop_toTopOf="@id/labelRating" >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opsi1"
            android:text="1"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opsi2"
            android:text="2"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opsi3"
            android:text="3"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opsi4"
            android:text="4"/>
    </RadioGroup>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/InputTip"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/labelTip"

        app:layout_constraintTop_toBottomOf="@id/inputRatingGroups" />

    <Switch
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"

        app:layout_constraintEnd_toEndOf="parent"

        android:id="@+id/inputTip"

        app:layout_constraintTop_toTopOf="@id/labelTip" />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/labelTip"
    android:layout_marginTop="20dp"
    android:text="@string/buttonHitung"
    android:id="@+id/buttonHitung"
    />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonHitung"
        android:text="@string/jmlOngkir"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/juduljmlongkir"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonHitung"
        android:hint="@string/nilaiDefaultAngka"
        android:id="@+id/jmlongkir"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/juduljmlongkir"
        android:text="@string/jmlTip"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/juduljmlTip"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/jmlongkir"
        android:hint="@string/nilaiDefaultAngka"
        android:id="@+id/jmlTip"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/juduljmlTip"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/juduljmlTotal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/jmlTip"
        android:hint="@string/nilaiDefaultAngka"
        android:id="@+id/jmlTotal"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>