<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_utama">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/buttonPindahHalamanKurir"
        android:onClick="pindahkehalamankurir"
        android:id="@+id/halaman1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/halaman2"
        android:onClick="pindahkehalamanrandomImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/buttonPindahHalamanGambar"
        app:layout_constraintTop_toBottomOf="@+id/halaman1"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/halaman3"
        android:onClick="pindahkehalamanRetrofitUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/buttonPindahHalamanRetrofitUser"
        app:layout_constraintTop_toBottomOf="@+id/halaman2"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/halaman4"
        android:onClick="pindahkehalamanListMovies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/buttonPindahHalamanListFilm"
        app:layout_constraintTop_toBottomOf="@+id/halaman3"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>